--- a/001.HTML학습/003.DKB_PJ/css/main.css
+++ b/001.HTML학습/003.DKB_PJ/css/main.css
@@ -1,6 +1,13 @@
 @charset "utf-8";
 /* 도깨비 메인 CSS - main.css */
 
+/* 웹 폰트 */
+@import url('https://fonts.googleapis.com/css2?family=Dokdo&family=Nanum+Brush+Script&display=swap');
+
+/* font-family: 'Dokdo', cursive;
+font-family: 'Nanum Brush Script', cursive; */
+
+
 html, body{
     margin: 0;
     padding: 0;
@@ -147,11 +154,13 @@ ci.span img {
 
 /* 캐릭터 설명 타이틀 */
 .cd h3 {
+    font-family: 'Dokdo', cursive;
     padding: 5px 10px 0px;
     /* 패딩 : 위 양쪽 아래 */
 }
 /* 캐릭터 설명 문단 */
 .cd p {
+    font-family: 'Nanum Brush Script', cursive;
     padding: 10px;
     /* 패딩: 4방향 */
     text-align: justify;
