--- a/001.HTML학습/003.DKB_PJ/css/main.css
+++ b/001.HTML학습/003.DKB_PJ/css/main.css
@@ -148,6 +148,10 @@ h1.logo {
 
     /* 배경 가상요소보다 위. 서브메뉴가 보이도록 함*/
     z-index: 1;
+
+    /* 상단여유공간패딩 */
+    padding-top: 10px;
+        /* 마진탑으로 처리하면 li와 떨어져서 동작이상발생 */
 }
 
 .smenu li {
@@ -161,20 +165,20 @@ h1.logo {
 }
 
 /* 상위메뉴 li에 마우스 오버시 서브메뉴 보이기 */
-/* 첫번째 상위메뉴 li - 메뉴 개수 3개 -> 30px*3=90px */
+/* 첫번째 상위메뉴 li - 메뉴 개수 3개 -> 30px*3=90px + 20px(여유공간) */
 .gnb>ul>li:nth-child(1):hover .smenu,
 .gnb>ul>li:nth-child(1):hover::after {
-    height: 90px;
+    height: 110px;
 }
-/* 세번쨰 상위메뉴 li - 메뉴 개수 4개-> 30px*4=120px */
+/* 세번쨰 상위메뉴 li - 메뉴 개수 4개-> 30px*4=120px + 20px(여유공간) */
 .gnb>ul>li:nth-child(3):hover .smenu,
 .gnb>ul>li:nth-child(3):hover::after {
-    height: 120px;
+    height: 140px;
 }
-/* 네번째 상위메뉴 li - 메뉴 개수 2개 -> 30px*2=60px */
+/* 네번째 상위메뉴 li - 메뉴 개수 2개 -> 30px*2=60px + 20px(여유공간) */
 .gnb>ul>li:nth-child(4):hover .smenu,
 .gnb>ul>li:nth-child(4):hover::after{
-    height: 60px;
+    height: 80px;
 }
 
 /* 상위메뉴 li에 마우스 오버시 서브메뉴 배경가상요소
@@ -355,9 +359,60 @@ ci.span img {
 
 /****** 3/ 하단영역 ******/
 .info {
-    min-height: 240px;
+    font-family: 'Nanum Gothic', sans-serif;
+    /* min-height: 240px; */
     background-color: rgba(255, 255, 255, 0.7);
     /* 반투명 배경색(알파값이 투명도) */
     padding: 15px;
+}
 
+/* 하단링크 */
+ul.bmenu{
+    max-width: 720px;
+    /* 최대 width로 잡으면 최대 720px보다 부모가 큰 경우
+    720을 유지하다가 이것보다 작아지면 auto로 전환한다  */
+    margin: 0 auto;
+    /* 마영오 가로중앙 */
+}
+.bmenu a{
+    color: #222;
+    /* 글자색 */
+    text-decoration: none;
+    /* 밑줄없앰 */
+    font-weight: bold;
+    /* 글자두껍게 */
+    font-size: 14px;
+    /* 글자크기 */
+    line-height: 2;
+    /* 줄간격 */
+    margin: 0 5px;
+    /* 양쪽마진 */
+}
+/* 오버시 */
+.bmenu a:hover {
+    color: red;
+    text-decoration: underline;
+}
+
+/* 주소박스 */
+.info address{
+    max-width: 720px;
+
+    margin: 20px auto;
+    /* 마진: 위아래 양쪽 */
+    font-style: normal;
+    /* address요소는 기본 이탤릭체임. 이것을 해제 */
+    font-size: 12px;
+    line-height: 2;
+    text-align: center;
+
+    border: 5px double #555;
+    padding: 10px 0;
+    /* 패딩: 위아래 양쪽 */
+}
+
+/* 하단로고 박스 */
+.blogo{
+    text-align: center;
+    /* 이미지 가운데 정렬 */
 }
