--- a/001.HTML학습/003.DKB_PJ/css/main.css
+++ b/001.HTML학습/003.DKB_PJ/css/main.css
@@ -218,6 +218,24 @@ h1.logo {
     transition: height .4s ease-in-out;
 }
 
+/* 모바일용 햄버거 버튼 */
+.ham {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    width: 50px;
+    height: 70px;
+    font-size: 40px;
+
+    border: none;
+    background-color: transparent;
+
+    display: none;
+
+    /* 버튼 기본 보더, 배경색 없애기 */
+}
+
 /****** 2. 컨텐츠영역 ******/
 .cont{
     min-height: 800px;
