--- a/Test/HTML/CSS/main2.css
+++ b/Test/HTML/CSS/main2.css
@@ -18,8 +18,8 @@ body {
 }
 
 body {
-  background: url(../images/logo.png) no-repeat fixed 10% 30%/10%,
-    url(../images/bg_mainvisual.jpg) no-repeat fixed center/cover;
+  background: url(../images/shop1_103_top_452202.jpg) no-repeat;
+  background-size: 100% 100%
   /* 배경 크기에 cover를 줄 경우 이미지의 양쪽,
     위 아래를 적절히 조정하여 대상 박스를 꽉 채움 */
 }
@@ -52,6 +52,7 @@ ol {
   margin: 0;
   padding: 0;
   list-style: none;
+  
 }
 
 /* 가상요소 clear */
@@ -89,12 +90,12 @@ h1.logo {
 
 /* 로고이미지 가로크기조정(세로는 자동) */
 .logo img {
-  width: 100px;
+  width: 200px;
 }
 
 /* 1-2. GNB메뉴 */
 .gnb {
-  width: 635px;
+  width: 399px;
   margin: 0 auto;
   
   /* 마영오 */
