--- a/001.HTML학습/006.CGV_PJ/003.site/css/main.css
+++ b/001.HTML학습/006.CGV_PJ/003.site/css/main.css
@@ -47,7 +47,20 @@ h1.tit {
 
     /* 그림자를 이용한 Glow효과 */
     text-shadow: 0 0 12px aquamarine;
+
+    /* 애니메이션: 이시이지반방마 */
+    animation: titAni 1.5s ease-in infinite alternate;
 }
+/* 타이틀 그림자 블러애니 */
+@keyframes titAni {
+    from{
+        text-shadow: 0 0 4px aquamarine;
+    }
+    to{
+        text-shadow: 0 0 12px aquamarine;
+    }
+} /* 키프레임 */
+
 
 /* 1-2. 전체메뉴(GNB) */
 .gnb {
@@ -382,7 +395,15 @@ h1.tit {
 
     margin: 2px;
 
+    /* 흑백이미지 설정하기 */
+    filter: grayscale(100%);
+
     /* outline: 2px dotted lime; */
+}
+
+/* 마우스 오버시 컬러 */
+.sns li:hover {
+    filter:grayscale(0%);
 }
 /* 페이스북 */
 .sns li:first-child {
