--- a/001.HTML학습/008.VOGUE_PJ/002.site/css/common.css
+++ b/001.HTML학습/008.VOGUE_PJ/002.site/css/common.css
@@ -53,21 +53,135 @@
     font-size: 13px;
 }
 /* 유튜브 아이콘 박스 */
-.sns a fi-youtube-play{
+.sns a.fi-youtube-play{
     font-size: 11px;
 }
 /* sns 마지막 a요소에 카스 이미지 넣기 */
 .sns a:last-child{
-    background:
+    background: 
     url(../images/sns_kakao.png) no-repeat center/auto 100%;
 }
 
 /************** 1-1-2.사이드메뉴 *************/
+.sideMenu{
+
+}
+/* 사이드메뉴 내용박스 */
+.smbx{
+    display: flex;
+    justify-content: flex-end;
+    /* 플렉스 내용박스 오른쪽 끝정렬 */
+}
+/* 메뉴 사이 구분선넣기 */
+.smbx>li:first-child{
+    border-right: 1px solid #e5e5e5;
+}
+/* 사이드메뉴 상위 a요소 */
+.smbx>li>a{
+    display: block;
+    padding: 0 13px;
+    line-height: 44px;
+
+    /* 글자설정 */
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    color: #747474;
+}
+
+/* 사이드메뉴 서브박스 */
+.smsub {
+    position: absolute;
+    /* 젠틀앱솔루트! */
+    border: 1px solid #e5e5e5;
+    opacity: 0;
+
+    /* 투명하기때문에 숨기기 */
+    height: 0;
+    overflow: hidden;
+
+   
+}
+/* 상위메뉴li에 마우스 오버시 하위메뉴 보이기 */
+.smbx>li:hover .smsub{
+    opacity: 1;
+    height: auto;
+    /* 원래 자동높이 복원! */ 
+    
+    /* 트랜지션 - 오버시에만 적용됨! */
+    transition: opacity .4s ease-in-out;
+}
+/* 서브메뉴 a요소 */
+.smsub a{
+    display: block;
+    padding: 7px 10px;
+
+    /* 글자설정 */
+    font-family: 'NanumBarunGothic', sans-serif;
+    font-size: 12px;
+    color: #747474;
+
+    /* 트랜지션: 속시이지 */
+    transition: all .2s ease-in-out;
+
+}
+/* 서브메뉴 a에 오버시 */
+.smsub a:hover {
+    background-color: #fafafa;
+    color: #333;
+}
+
+/* 첫번째 사이드메뉴에 마우스 오버시 커서모양 text */
+.smbx>li:first-child>a{/* 직계 a로 할것! 서브a엔 미적용 */
+    cursor: text;
+}
 
 /*************  1-2.로고박스 *************/
+.logo{
+    text-align: center;
+    /* 글자, 인라인요소 가로중앙 */
+    /* 박스에 이미지 넣을때 하단간극
+    없애는 것은 vertical-align으로 해결!
+    이미 reset.css에 셋팅됨! */
+}
 
 /************** 1-3.GNB박스 *************/
+.gnb{
+    /* 글자설정 */
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 16px;
+    line-height: 40px;
 
+    padding: 0 30px;
+    margin-top: 11px;
+}
+.gnb>ul{
+    display: flex;
+    /* 플렉스 박스 */
+    justify-content: center;
+    /* 컨텐츠 가로중앙 */
+    flex-wrap: wrap;
+    /* 좁아지면 자동줄바꿈 */
+}
+/* 리스트 요소 */
+.gnb li{
+    padding-right: 45px;
+}
+/* 마지막 리스트 li 돋보기 두꺼운체 */
+.gnb li:last-child a{
+    font-weight: bold;
+}
+.gnb li:last-child{
+    padding-right: 0;
+}
+
+/* GNB 링크 트랜지션 */
+.gnb a{
+    transition: color .3s;
+}
+/* 오버시 */
+.gnb a:hover{
+    color: red;
+}
 
 /******************* 3. 하단영역 *******************/
 .info{
