--- a/001.HTML학습/008.VOGUE_PJ/002.site/css/core.css
+++ b/001.HTML학습/008.VOGUE_PJ/002.site/css/core.css
@@ -33,6 +33,7 @@
     font-family: 'Pistilli', sans-serif;
 */
 
+
 /* 레이아웃 공통 class */
 
 /* 속박스 */
@@ -88,9 +89,50 @@
 
 /* 컨텐츠 박스 - 실제 내용이 들어가는 박스 */
 .cbx {
+    position: relative;
+    /* 부모자격 - 하위 h2, 가상요소의 부모 */
+}
+/* 가상요소로 반투명 검정배경 그라데이션 넣기 */
+.cbx::before {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background-image: 
+    linear-gradient(to top, 
+    rgba(0, 0, 0, 0.726),rgba(0, 0, 0, 0));
+}
+
+/* 파트1의 컨텐츠박스 */
+.pt1 .cbx {
     height: 100%;
     /* 내부박스 높이채우기 */
+    /* .pt2의 flex적용인 경우 높이값 불필요! */
 }
+
+/* 컨텐츠 타이틀 박스 */
+.cbx h2 {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+
+    box-sizing: border-box;
+    /* 패딩,보더 내부포함 */
+
+    /* 글자체 */
+    font-family: 'Pistilli','NanumBarunGothic';
+    /* 웹폰트 영문체(Pistilli), 한글체(NanumBarunGothic) */
+    font-size: 33px;
+    font-weight: lighter;
+    text-align: center;
+    color: #fff;
+
+    padding: 50px;
+}
+
 
 /* 3개로 구성되는 컨텐츠박스 */
 /* flex적용하기! */
@@ -109,7 +151,6 @@
 }
 
 
-
 /* 공통 class */
 
 /* 배경이미지 설명(또는 숨길글자) 클래스 */
@@ -120,3 +161,7 @@
     overflow: hidden;
 }
 
+/* 배경색 class */
+.bgc{
+    background-color: #f9f9f9;
+}
