--- a/001.HTML학습/008.VOGUE_PJ/002.site/css/core.css
+++ b/001.HTML학습/008.VOGUE_PJ/002.site/css/core.css
@@ -105,6 +105,29 @@
     linear-gradient(to top, 
     rgba(0, 0, 0, 0.726),rgba(0, 0, 0, 0));
 }
+/* 컨텐츠박스 가상요소로 보더애니 구현 */
+.cbx::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    /* 나의부모? .cbx */
+    box-sizing: border-box;
+    /* 보더가 생겨도 커지지 않도록 설정! */
+    border: 0px solid transparent;
+    /* 두께 0의 투명색 보더 처음설정 */
+
+    /* 트랜지션: 속시이지 */
+    transition: all .2s ease-in;
+}
+/* .pbx에 마우스 오버시 보더애니 */
+.cbx:hover::after {
+    border: 20px solid red;
+}
+
 
 /* 파트1의 컨텐츠박스 */
 .pt1 .cbx {
