--- a/001.HTML학습/008.VOGUE_PJ/002.site/css/common.css
+++ b/001.HTML학습/008.VOGUE_PJ/002.site/css/common.css
@@ -228,6 +228,8 @@
     font-weight: bold;
     transform: scaleX(1.4);
     line-height: 0;
+    display: none;
+    /* 처음에 안보임 */
 }
 /* 돋보기 버튼 */
 .mag{
@@ -237,7 +239,15 @@
     line-height: 0;
     font-weight: bold;
     transform: scale(1.2);
+    display: none;
+    /* 처음에 안보임 */
 }
+/* 모바일메뉴박스 */
+#mobx{
+    display: none;
+}
+
+
 
 /******************* 3. 하단영역 *******************/
 .info {
