--- a/001.HTML학습/008.VOGUE_PJ/002.site/css/media.css
+++ b/001.HTML학습/008.VOGUE_PJ/002.site/css/media.css
@@ -26,6 +26,9 @@
 }
 
 /* 5) 햄버거, 검색버튼 보이기(만들어야함) */
+.ham,.mag{
+    display: block;
+}
 
 /* 2. 컨텐츠 영역 */
 
@@ -68,26 +71,26 @@
 .pt2 .cbx h2{
     font-size: 20px;
 }
-/* 3) 컨텐츠 오버시 보더 애니 조정 */
+/* 3) 컨텐츠 오버시 보더애니 조정 */
 .cbx:hover::after{
     border: 10px solid #f00;
     /* 보더 두께 조정 */
 }
-
 .cbx::after{
     transition: none;
     /* 트랜지션 없앰 */
 }
 
+
 /* 3.하단영역 */
-/* 하단박스 패딩변경 */
+/* 1) 하단박스 */
 .info{
     padding: 40px;
     /* 패딩변경 */
     min-height: auto;
-    /* 최소높이 해제 */
+    /* 최소높이해제 */
 }
-/* 하단로고 이미지 width 200px */
+/* 2) 하단로고 이미지 width 200px */
 .blogo img{
     width: 200px;
 }
