--- a/001.HTML학습/008.VOGUE_PJ/002.site/css/common.css
+++ b/001.HTML학습/008.VOGUE_PJ/002.site/css/common.css
@@ -5,6 +5,11 @@
             하단영역(하단로고, 회사정보)
 */
 
+/* 부드러운 스크롤 */
+html{
+    scroll-behavior: smooth;
+}
+
 /******************* 1. 상단영역 *******************/
 /* 겉박스 */
 #top {
@@ -26,28 +31,51 @@
     그래서 최소높이로 잡아야 늘어날 수 있음! */
 }
 
-/* #top에 클래스가 "on" 넣을 경우 슬림 사이즈 상단 영역 변경 */
+/* #top에 클래스 "on"넣을 경우 슬림 사이즈 상단영역변경 */
 
+/* 상단영역 화면에 고정하기 */
+#top.on{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+}
 /* 중앙박스에 최소높이값 없앰 */
-#top.on .top{
+#top.on .top {
     min-height: auto;
 }
 /* 로고 포지션 등 변경 */
-#top.on .logo{
+#top.on .logo {
     position: absolute;
     top: 0;
     font-size: 100%;
     text-align: center;
 }
 /* 로고이미지 가로크기변경 */
-#top.on .logo img{
+#top.on .logo img {
     width: 100px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+/* GNB 글자조정 */
+#top.on .gnb{
+    font-size: 14px;
+    line-height: 50px;
+    margin-top: 0;
+    margin-left: 125px;
+}
+#top.on .gnb li{
+    padding-right: 35px;
+}
+#top.on .gnb a{
+    color: #333;
 }
 /* 상단메뉴 없애기 */
-#top.on .tmenu{
+#top.on .tmenu {
     display: none;
 }
-/* 위의 모든 슬림메뉴 변경은 #top에 .on을 준경우 적용 */
+/* 위의 모든 슬림메뉴 변경은 #top에 .on을 준경우 적용! */
 
 /************** 1-1.상단메뉴 ************/
 .tmenu {
@@ -278,13 +306,12 @@
 .mwrap{
     position: absolute;
     top: 7px;
-    bottom: 7px;
     left: 30px;
     right: 30px;
     /* 부모박스기준 박스당기기(양쪽방향) 
     -> 유동적인 가로크기가 생성됨! */
     height: 36px;
-    /* 높이값은 정해줌 */
+    /* 높이값은 정해줌! */
     background-color: #000;
 }
 /* 검색입력창 */
@@ -470,4 +497,39 @@
 /* 마지막 li만 두껍게! */
 .blink li:last-child a{
     font-weight: bold;
+}
+
+
+/* 위로가기 버튼 */
+.tbtn{
+    position: fixed;
+    bottom: -35px; 
+    /* 아래쪽 바깥에 나가있음 */
+    right: 75px;
+    width: 48px;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    background-color: #333;
+    border-radius: 4px 4px 0 0;
+    /* 둥근모서리: 왼위 오른위 오른아래 왼아래 */
+    color: #fff;
+    z-index: 9999;
+    opacity: 0; /* 투명하게 */
+    display: none; /* 숨기기 */
+
+    /* 트랜지션: 속시이지 */
+    transition: opacity .3s,
+    background-color .3s;
+
+}
+/* 위로이동버튼에 .on주기 */
+.tbtn.on{
+    bottom: 0;
+    opacity: 1;
+    transition: opactiy .3s;
+}
+/* 탑버튼 마우스 오버시 */
+.tbtn:hover {
+    background-color: #f00;
 }
